# nachos

./: .buildinfo  .bumpversion.cfg  .drone.yml  .gitignore  .gitlab-ci.yml  .install_require  .release_it.yml  CHANGELOG.md  CONTRIBUTING.md  Makefile  Pipfile  README.md  api.html  contributing.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  search.html  searchindex.js  setup.py  use.html
.github/workflows/: tests.yml
_downloads/346475937813d2efa4e1a7a2e51f59ab/: dalton.patch
_sources/: contributing.rst.txt  install.rst.txt  use.rst.txt
_static/: documentation_options.js
docs/: api.rst  conf.py  contributing.rst  index.rst  install.rst  use.rst
documentation/: Makefile
documentation/source/: api.rst  conf.py  contributing.rst  index.rst  install.rst  use.rst
nachos/: __init__.py  analyze.py  bake.py  cook.py  make.py  nachos_cook.py  nachos_cooker.py  nachos_prepare.py  peek.py  prepare.py  shake.py
nachos/core/: __init__.py  analyzing.py  baking.py  cooking.py  files.py  making.py  preparing.py  shaking.py
nachos/qcip_tools_ext/: gaussian.py  qchem.py
requirements/: requirements-base.in  requirements.in
tests/: __init__.py  test_nachos_bake.py  test_nachos_cook.py  tests_files.py  tests_nachos_analyze.py  tests_nachos_bake.py  tests_nachos_cook.py  tests_nachos_cooker.py  tests_nachos_make.py  tests_nachos_prepare.py  tests_nachos_shake.py
tests/tests_files/: molecule_with_derivs.h5  molecule_with_derivs_and_vibs.h5  molecule_with_derivs_gamma.h5  (+2 more)
(+3 files in other folders)
